<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_group_title_browse">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_top_headlines"
                android:icon="@drawable/ic_nav_top_headlines"
                android:title="@string/nav_title_top_headlines" />
            <item
                android:id="@+id/nav_all_articles"
                android:icon="@drawable/ic_nav_all_articles"
                android:title="@string/nav_title_all_articles" />
            <item
                android:id="@+id/nav_categories"
                android:icon="@drawable/ic_nav_categories"
                android:title="@string/nav_title_categories" />
        </menu>
    </item>


    <item android:title="@string/nav_group_title_others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_nav_settings"
                android:title="@string/nav_title_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_nav_about"
                android:title="@string/nav_title_about" />
        </menu>
    </item>

</menu>
